--- a/resources/sass/user/app.scss
+++ b/resources/sass/user/app.scss
@@ -7,6 +7,7 @@
 @import "component/input";
 @import "component/button";
 @import "component/main-card";
+@import "component/host-card";
 @import "component/room-card";
 @import "component/invoice-entries";
 //Page
