--- a/resources/sass/user/libs.scss
+++ b/resources/sass/user/libs.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Muli:400,700,900&display=swap&subset=vietnamese');
+@import "~@openfonts/muli_vietnamese/index.css";
 @import "~font-awesome/css/font-awesome.css";
 @import '~filepond/dist/filepond.min.css';
 @import '~filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.css';
