--- a/resources/sass/user/_mixin.scss
+++ b/resources/sass/user/_mixin.scss
@@ -1,4 +1,4 @@
-@mixin Rounded($size) {
+@mixin Rounded($size:0) {
     -webkit-border-radius: $size;
     -moz-border-radius: $size;
     border-radius: $size;
@@ -26,7 +26,7 @@
     transform: rotate($value);
 }
 
-@mixin TransformTranslate($x,$y) {
+@mixin TransformTranslate($x:-50%,$y:-50%) {
     -webkit-transform: translate($x, $y);
     -moz-transform: translate($x, $y);
     -ms-transform: translate($x, $y);
