--- a/resources/sass/user/component/_input.scss
+++ b/resources/sass/user/component/_input.scss
@@ -2,7 +2,7 @@
 
 .form-group {
     label {
-        font-weight: 600;
+        font-weight: 700;
         margin-bottom: 0;
         padding-top: .25rem;
     }
@@ -56,7 +56,7 @@
             content: '';
             position: absolute;
             right: 0;
-            top: 2.5rem;
+            bottom: 0.3rem;
             line-height: 1.25rem;
         }
 
