--- a/resources/sass/user/libs.scss
+++ b/resources/sass/user/libs.scss
@@ -1,3 +1,5 @@
+@import "~@goongmaps/goong-js/dist/goong-js.css";
+@import "~@goongmaps/goong-geocoder/dist/goong-geocoder.css";
 @import "~@openfonts/muli_vietnamese/index.css";
 @import "~font-awesome/css/font-awesome.css";
 @import '~filepond/dist/filepond.min.css';
