--- a/resources/sass/user/app.scss
+++ b/resources/sass/user/app.scss
@@ -10,6 +10,7 @@
 @import "component/host-card";
 @import "component/room-card";
 @import "component/invoice-entries";
+@import "component/address-result-list";
 //Page
 @import "layout/master";
 @import "layout/sidebar";
