--- a/resources/sass/user/component/_host-card.scss
+++ b/resources/sass/user/component/_host-card.scss
@@ -40,6 +40,11 @@
                 flex-basis: 100%;
             }
 
+            &--separator {
+                border-top: 1px solid lightgray;
+                margin-bottom: 1rem;
+            }
+
             p {
                 margin-bottom: 1rem;
                 @include Responsive(MD) {
@@ -76,13 +81,24 @@
         .room-states__item {
             width: calc(100% / 3);
             display: flex;
-            position: relative;
-            padding-left: 1rem;
+
 
             .item {
                 &__label {
                     margin-right: .5rem;
                     margin-bottom: 0;
+                    position: relative;
+                    padding-left: 1rem;
+
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        border: .35rem solid var(--color-base);
+                        left: 0;
+                        top: 50%;
+                        @include Rounded(50%);
+                        @include TransformTranslate(0, -50%);
+                    }
                 }
 
                 &__value {
@@ -92,31 +108,28 @@
                 }
             }
 
-            &::after {
-                content: '';
-                position: absolute;
-                border: .35rem solid var(--color-base);
-                left: 0;
-                top: 50%;
-                @include Rounded(50%);
-                @include TransformTranslate(0, -50%);
-            }
 
             &--success {
-                &::after {
-                    border-color: var(--success);
+                .item__label {
+                    &::after {
+                        border-color: var(--success);
+                    }
                 }
             }
 
             &--warning {
-                &::after {
-                    border-color: var(--warning);
+                .item__label {
+                    &::after {
+                        border-color: var(--warning);
+                    }
                 }
             }
 
             &--danger {
-                &::after {
-                    border-color: var(--danger);
+                .item__label {
+                    &::after {
+                        border-color: var(--danger);
+                    }
                 }
             }
         }
