working on host image

--- a/resources/sass/user/layout/_dashboard.scss
+++ b/resources/sass/user/layout/_dashboard.scss
@@ -42,7 +42,7 @@
             font-size: .8rem;
             margin-bottom: 0;
             text-transform: uppercase;
-            color: var(--color-variant);
+            color: var(--color-base);
         }
     }
 }
