--- a/resources/sass/user/app.scss
+++ b/resources/sass/user/app.scss
@@ -11,6 +11,7 @@
 @import "component/room-card";
 @import "component/invoice-entries";
 @import "component/address-result-list";
+@import "component/trovie-gallery";
 //Page
 @import "layout/master";
 @import "layout/sidebar";
