--- a/public/user/css/app.css
+++ b/public/user/css/app.css
@@ -935,6 +935,43 @@ a:hover {
   opacity: 1 !important;
 }
 
+.trovie-avatar-upload {
+  width: 100%;
+  position: relative;
+  padding-bottom: 50%;
+  border: 1px solid lightgray;
+}
+
+.trovie-avatar-upload .upload__image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.trovie-avatar-upload .upload__image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+  object-fit: contain;
+}
+
+.trovie-avatar-upload .upload__file {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+
+.trovie-avatar-upload .upload__file:hover {
+  cursor: pointer;
+}
+
 html,
 body {
   scroll-behavior: smooth;
