--- a/resources/sass/user/layout/_sidebar.scss
+++ b/resources/sass/user/layout/_sidebar.scss
@@ -105,6 +105,6 @@
         height: auto;
         top: auto;
         bottom: 0;
-        justify-content: space-between;
+        justify-content: center;
     }
 }
